--- a/package.json
+++ b/package.json
@@ -1,13 +1,35 @@
 {
   "name": "typescript-backend-best-practice",
   "version": "1.0.0",
-  "main": "app.ts",
+  "main": "server.js",
   "repository": "https://github.com/DeanRTaylor1/typescript-backend-best-practice.git",
   "author": "DeanRTaylor1 <deanrtaylor@hotmail.com>",
   "license": "MIT",
   "private": false,
-  "dependencies": {},
+  "scripts": {
+    "dev": "cross-env NODE_ENV=development ts-node src/server.ts"
+  },
+  "dependencies": {
+    "body-parser": "^1.20.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
+    "reflect-metadata": "^0.1.13",
+    "routing-controllers": "^0.10.4",
+    "typedi": "^0.10.0"
+  },
   "devDependencies": {
+    "@types/body-parser": "^1.19.4",
+    "@types/express": "^4.17.20",
+    "@types/multer": "^1.4.9",
+    "cross-env": "^7.0.3",
+    "eslint": "^8.52.0",
+    "jest": "^29.7.0",
+    "prettier": "^3.0.3",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.2.2"
   }
 }
