--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "dotenv": "^16.3.1",
+    "envalid": "^8.0.0",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
     "reflect-metadata": "^0.1.13",
