--- a/package.json
+++ b/package.json
@@ -7,27 +7,39 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development ts-node src/server.ts"
+    "dev": "cross-env NODE_ENV=development nodemon",
+    "lint": "eslint --ignore-path .gitignore --ext .ts src/"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "cli-color": "^2.0.3",
     "dotenv": "^16.3.1",
     "envalid": "^8.0.0",
+    "eslint": "8.22.0",
     "express": "^4.18.2",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "reflect-metadata": "^0.1.13",
     "routing-controllers": "^0.10.4",
-    "typedi": "^0.10.0"
+    "typedi": "^0.10.0",
+    "winston": "^3.11.0",
+    "winston-daily-rotate-file": "^4.7.1"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.4",
     "@types/express": "^4.17.20",
     "@types/multer": "^1.4.9",
+    "@typescript-eslint/eslint-plugin": "^6.8.0",
+    "@typescript-eslint/parser": "^6.8.0",
     "cross-env": "^7.0.3",
-    "eslint": "^8.52.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-prettier": "^5.0.1",
     "jest": "^29.7.0",
+    "nodemon": "^3.0.1",
     "prettier": "^3.0.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
