[config] add docker and db config

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,5 +24,8 @@
             "error",
             "always"
         ]
-    }
+    },
+    "ignorePatterns": [
+        "src/databases/**"
+    ]
 }
