--- a/package.json
+++ b/package.json
@@ -10,7 +10,13 @@
     "dev:docker": "yarn db:setup && cross-env NODE_ENV=development nodemon",
     "lint": "eslint --ignore-path .gitignore --ext .ts src/",
     "db:setup": "sequelize-cli db:migrate",
-    "dev": "cross-env DOCKERFILE_NAME=Dockerfile.dev docker-compose up --build"
+    "dev": "cross-env DOCKERFILE_NAME=Dockerfile.dev docker-compose up --build",
+    "postgres": "docker run --name postgres14 -p 5432:5432 -e POSTGRES_USER=root -e POSTGRES_PASSWORD=secret -d postgres:14-alpine",
+    "createdb": "sleep 5 && docker exec -it postgres14 createdb --username=root --owner=root test_db",
+    "dropdb": "docker exec -it postgres14 dropdb --username=root test_db",
+    "test-jest": "jest --ci --passWithNoTests --runInBand",
+    "cleanup": "docker stop postgres14 && docker rm postgres14",
+    "test": "yarn postgres && yarn createdb && cross-env NODE_ENV=test yarn db:setup &&  yarn test-jest && yarn cleanup"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
@@ -35,6 +41,7 @@
   "devDependencies": {
     "@types/body-parser": "^1.19.4",
     "@types/express": "^4.17.20",
+    "@types/jest": "^29.5.6",
     "@types/multer": "^1.4.9",
     "@typescript-eslint/eslint-plugin": "^6.8.0",
     "@typescript-eslint/parser": "^6.8.0",
@@ -47,6 +54,7 @@
     "nodemon": "^3.0.1",
     "prettier": "^3.0.3",
     "sequelize-cli": "^6.6.1",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.2.2"
