--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,6 +23,16 @@
         "semi": [
             "error",
             "always"
+        ],
+        "@typescript-eslint/no-unused-vars": [
+            "error",
+            {
+                "vars": "all",
+                "args": "after-used",
+                "ignoreRestSiblings": true,
+                "varsIgnorePattern": "^_",
+                "argsIgnorePattern": "^_"
+            }
         ]
     },
     "ignorePatterns": [
