--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -43,29 +43,30 @@ jobs:
       - name: Setup Database
         run: yarn db:setup
         env:
-            DB_USERNAME: user 
-            DB_PASSWORD: password 
-            DB_DATABASE: testdb
-            DB_HOST: localhost
-            DB_DIALECT: postgres
-            DB_PORT: 5432
-            NODE_ENV: test
-            LOG_DIR: logs/
-            LOG_FORMAT: dev
-            LOG_LEVEL: debug
-            PORT: 3000
+          DB_USERNAME: user
+          DB_PASSWORD: password
+          DB_DATABASE: testdb
+          DB_HOST: localhost
+          DB_DIALECT: postgres
+          DB_PORT: 5432
+          NODE_ENV: test
+          LOG_DIR: logs/
+          LOG_FORMAT: dev
+          LOG_LEVEL: debug
+          PORT: 3000
 
       - name: Run tests
         run: yarn test-jest
         env:
-            DB_USERNAME: user 
-            DB_PASSWORD: password 
-            DB_DATABASE: testdb
-            DB_HOST: localhost
-            DB_DIALECT: postgres
-            DB_PORT: 5432
-            NODE_ENV: test
-            LOG_DIR: logs/
-            LOG_FORMAT: dev
-            LOG_LEVEL: debug
-            PORT: 3000
+          DB_USERNAME: user
+          DB_PASSWORD: password
+          DB_DATABASE: testdb
+          DB_HOST: localhost
+          DB_DIALECT: postgres
+          DB_PORT: 5432
+          NODE_ENV: test
+          LOG_DIR: logs/
+          LOG_FORMAT: dev
+          LOG_LEVEL: debug
+          PORT: 3000
+          SNAKE_CASE: true
