--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "dropdb": "docker exec -it postgres14 dropdb --username=root test_db",
     "test-jest": "jest --ci --passWithNoTests --runInBand",
     "cleanup": "docker stop postgres14 && docker rm postgres14",
-    "test": "yarn postgres && yarn createdb && cross-env NODE_ENV=test yarn db:setup && yarn test-jest; yarn cleanup"
+    "test": "yarn postgres && yarn createdb && cross-env NODE_ENV=test yarn db:setup && yarn test-jest; yarn cleanup",
+    "build": "tsc && tsc-alias"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
@@ -34,6 +35,7 @@
     "routing-controllers": "^0.10.4",
     "sequelize": "^6.33.0",
     "sequelize-typescript": "^2.1.5",
+    "tsc-alias": "^1.8.8",
     "typedi": "^0.10.0",
     "winston": "^3.11.0",
     "winston-daily-rotate-file": "^4.7.1"
@@ -45,12 +47,12 @@
     "@types/multer": "^1.4.9",
     "@typescript-eslint/eslint-plugin": "^6.8.0",
     "@typescript-eslint/parser": "^6.8.0",
-    "jest": "^29.7.0",
     "cross-env": "^7.0.3",
     "eslint-config-prettier": "^9.0.0",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-prettier": "^5.0.1",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.1",
     "prettier": "^3.0.3",
     "sequelize-cli": "^6.6.1",
