--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "envalid": "^8.0.0",
     "eslint": "8.22.0",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.11.3",
@@ -43,6 +44,7 @@
     "@types/body-parser": "^1.19.4",
     "@types/express": "^4.17.20",
     "@types/jest": "^29.5.6",
+    "@types/jsonwebtoken": "^9.0.4",
     "@types/multer": "^1.4.9",
     "@typescript-eslint/eslint-plugin": "^6.8.0",
     "@typescript-eslint/parser": "^6.8.0",
