--- a/package.json
+++ b/package.json
@@ -53,7 +53,9 @@
     "eslint-loader": "^4.0.2",
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-prettier": "^5.0.1",
+    "husky": "^8.0.3",
     "jest": "^29.7.0",
+    "lint-staged": "^15.0.2",
     "nodemon": "^3.0.1",
     "prettier": "^3.0.3",
     "sequelize-cli": "^6.6.1",
@@ -61,5 +63,17 @@
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.2.2"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "node .scripts/check-env-vars.js && lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,ts}": [
+      "eslint --fix",
+      "git add"
+    ],
+    ".github/workflows/*.yml": "eslint"
   }
 }
