[organise] organise project structure

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -48,7 +48,9 @@
     "overrides": [
         {
             "files": [
-                "*.controller.ts"
+                "*.controller.ts",
+                "src/**/decorators/**",
+                "src/**/middlewares/**"
             ],
             "rules": {
                 "max-params": "off"
