[caching] add caching services

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,9 @@ SNAKE_CASE=true
 
 JWT_SECRET="TESTSECRET123"
 JWT_EXPIRES="12h"
+
+CACHE_TYPE=redis
+REDIS_HOST=redis
+REDIS_PORT=6379
+REDIS_PASSWORD=
+REDIS_USERNAME=
