--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: '3.9'
 services:
   postgres:
-    image: postgres:14-alpine
+    image: postgres:16-alpine
     environment:
       - POSTGRES_USER=root
       - POSTGRES_PASSWORD=secret
@@ -24,7 +24,15 @@ services:
     ports:
       - "3000:3000"
     environment:
-      - DB_SOURCE=postgresql://root:secret@postgres:5432/test_db?sslmode=disable
+      - DB_SOURCE=postgresql://root:secret@postgres:5432/dev_db?sslmode=disable
+      - REDIS_URL=redis://redis:6379/0
     depends_on:
       postgres:
         condition: service_healthy
+      redis:
+        condition: service_started
+
+  redis:
+    image: redis:latest
+    ports:
+      - "6379:6379"
