--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "lint": "eslint --ignore-path .gitignore --ext .ts src/",
     "db:setup": "sequelize-cli db:migrate",
     "dev": "cross-env DOCKERFILE_NAME=Dockerfile.dev docker-compose up --build",
-    "postgres": "docker run --name postgres14 -p 5432:5432 -e POSTGRES_USER=root -e POSTGRES_PASSWORD=secret -d postgres:14-alpine",
-    "createdb": "sleep 5 && docker exec -it postgres14 createdb --username=root --owner=root test_db",
-    "dropdb": "docker exec -it postgres14 dropdb --username=root test_db",
+    "postgres": "docker run --name postgres16 -p 5432:5432 -e POSTGRES_USER=root -e POSTGRES_PASSWORD=secret -d postgres:16-alpine",
+    "createdb": "sleep 5 && docker exec -it postgres16 createdb --username=root --owner=root test_db",
+    "dropdb": "docker exec -it postgres16 dropdb --username=root test_db",
     "test-jest": "jest --ci --passWithNoTests --runInBand",
-    "cleanup": "docker stop postgres14 && docker rm postgres14",
+    "cleanup": "docker stop postgres16 && docker rm postgres16",
     "test": "yarn postgres && yarn createdb && cross-env NODE_ENV=test yarn db:setup && yarn test-jest; yarn cleanup",
     "build": "tsc && tsc-alias"
   },
@@ -30,6 +30,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.11.3",
+    "redis": "^4.6.10",
     "reflect-metadata": "^0.1.13",
     "routing-controllers": "^0.10.4",
     "sequelize": "^6.33.0",
