--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,10 +21,12 @@ jobs:
         ports:
           - 5432:5432
         options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
+          --health-cmd pg_isready --health-interval 10s --health-timeout 5s
           --health-retries 5
+      redis:
+        image: redis:latest
+        ports:
+          - 6379:6379
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
@@ -72,3 +74,8 @@ jobs:
           SNAKE_CASE: true
           JWT_SECRET: SECRET
           JWT_EXPIRES: 12h
+          CACHE_TYPE: "memory"
+          REDIS_HOST:
+          REDIS_PORT:
+          REDIS_PASSWORD:
+          REDIS_USERNAME:
