[upload] refactor directories

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -79,3 +79,6 @@ jobs:
           REDIS_PORT:
           REDIS_PASSWORD:
           REDIS_USERNAME:
+          UPLOAD_TYPE: disk
+          DISKS_DIR: ./public/
+          API_URL: localhost:3000
