--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "test-jest": "jest --ci --passWithNoTests --runInBand",
     "cleanup": "docker stop postgres16 && docker rm postgres16",
     "test": "yarn postgres && yarn createdb && cross-env NODE_ENV=test yarn db:setup && yarn test-jest; yarn cleanup",
-    "build": "tsc && tsc-alias"
+    "build": "tsc && tsc-alias",
+    "gen-swagger": "node scripts/har-to-yml.js"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
@@ -35,10 +36,12 @@
     "routing-controllers": "^0.10.4",
     "sequelize": "^6.33.0",
     "sequelize-typescript": "^2.1.5",
+    "swagger-ui-express": "^5.0.0",
     "tsc-alias": "^1.8.8",
     "typedi": "^0.10.0",
     "winston": "^3.11.0",
-    "winston-daily-rotate-file": "^4.7.1"
+    "winston-daily-rotate-file": "^4.7.1",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.4",
@@ -53,6 +56,7 @@
     "eslint-loader": "^4.0.2",
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-prettier": "^5.0.1",
+    "har-to-openapi": "^2.0.0",
     "husky": "^8.0.3",
     "jest": "^29.7.0",
     "lint-staged": "^15.0.2",
